--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 ### your site title here
 
-title: Hagura - Light!
-baseurl: /hagura # name of the repository
-email: your@email.com
+title: A blog about being a procrastination
+email: tkdspace101@gmail.com
+future: true
 
 
 
@@ -12,10 +12,10 @@ markdown: kramdown
 
 
 # Tracker
-analytics: UA-83979019-1
+analytics: 
 
 # Comments
-disqus-shortname: webjeda-demo
+disqus-shortname: 
 
 
 #optimization
