--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 ### your site title here
 
-title: A blog about being a procrastination
+title: A blog about procrastination and Stuff
 email: tkdspace101@gmail.com
 future: true
 
